[package]
name = "darkstone"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = "0.22.6"
tree-sitter-md = { version = "0.2.3", path = "../tree-sitter-markdown/" }
tree-sitter-yaml = "0.6.1"
glob = "0.3.1"
itertools = "0.13.0"
rayon = "1.10.0"
clap = { version = "4.5.4", features = ["derive"] }

